Sun May 27 16:20:10 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ciao/Object_Set_T.cpp:

          Enhanced exception safety of this class. Look at BUG ID 2725 for
          details.

Thu May 24 14:52:18 UTC 2007    <dengg@blade23.isislab.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp

          Reverted a change which was accidentally checked in.

Wed May 23 20:01:49 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:
        * DAnCE/Deployment/NodeApp_CB_Impl.h:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:

          Removed ACE_HAS_THREADS guards.

Wed May 23 18:36:35 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * MPC/config/ciao_deployment_stub.mpb:

          Added "requires += threads" to disable single threaded build.

        * DAnCE/NodeManager/Node_Manager.cpp
        * DAnCE/NodeManager/NodeManager_Impl.cpp
        * DAnCE/NodeManager/NodeManager_Impl.h

          Removed ACE_HAS_THREADS guards.

Wed May 23 02:21:30 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.h:

          Added back #if defined (ACE_HAS_THREADS) macro to
          fix error in single_threaded build.

Mon May 21 15:46:23 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/Task_StartLaunch.h:

          Included ACE configuration header file to fix the warnigns
          on the VxWorks5.5.1_x86_GCC2.96_Exceptions build.

Sat May 19 15:59:08 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:
        * DAnCE/Deployment/NodeApp_CB_Impl.h:

          Moved #include "ace/config-all.h" from .h file to
          the .cpp file since otherwise the #if defined (ACE_HAS_THREADS)
          cannot be evaluated properly.
